[tool.poetry]
name = "is404-api"
version = "0.1.0"
description = ""
authors = ["Ryan Schuetzler <ryan@schuetzler.net>"]
readme = "README.md"
packages = [{include = "is404_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
sqlalchemy = "^2.0.1"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
